	- Changed the daily timer to a set time each day. Configure new_day_time to set when you want taxes to be collected.
	  eg. 15h30m would attempt to collect taxes at 3:30pm.
v0.76.1.18:
	- Returned the setting day_interval so you can configure the length of a day.
	  If you set a day length of 12 hours (12h), taxes will be collected on a 12 hourly cycle, instead of a 24 hour one.
	  new_day_time should be set to less than the day_interval, but it will default to the same, if it's incorrectly set.
v0.76.1.19:
	 - Fixed an error in fetching the resident on new cache creation (caused by code reorganising).
v0.76.2.0:
	- Release
v0.76.2.1:
	- Fixed an error when not using a currency type with Essentials Eco.
v0.76.2.2:
	- Force load the destination chunk when teleporting. Attempt to prevent the falling through the world bug.
	- If wild_revert_on_mob_explosion is enabled, the explosions no longer drop any blocks.
	- Simplfied Plugin interfacing for Economy plugins to a single setting of using_economy.
	  Towny will first attempt to use Register.jar. If it's not present
	  it will fall back to the legacy support for iConomy 5.01.
v0.76.2.3:
	- Added a Permission handler to towny so it will now support GroupManager, PEX, bPermissions, Permissions 2/3 + (bridges) and Bukkit Perms.
	- Admins can now pick, choose and modify which notifications are shown when a player walks from plot to plot. Check the new section 'Town Notifications' in the config.
	- Town notifications now show a money formatted price.
v0.76.2.4:
	- Fixed '/town new' and '/nation new' to properly follow the settings in config if permissions are disabled.
	- If not using Eco, Towny will no longer error when deleting/renaming towns/nations, or upon a new day.
v0.76.2.5:
	- When using SuperPerms you can now use the following nodes with towny.
	  prefix.prefixhere
	  suffix.suffixhere
	  towny_maxplots.x (with x being a number eg towny_maxplots.2)